--- a/book/book.tex
+++ b/book/book.tex
@@ -3532,89 +3532,89 @@ tipos).  Solución: \url{http://thinkpython2.com/code/spiral.py}.
 \end{exercise}
 
 
-\chapter{Conditionals and recursion}
+\chapter{Condicionales y recursividad}
 
-The main topic of this chapter is the {\tt if} statement, which
-executes different code depending on the state of the program.
-But first I want to introduce two new operators: floor division
-and modulus.
+El tema principal de este capítulo es la sentencia {\tt if}, la cual
+ejecuta código diferente dependiendo del estado del programa.
+Pero primero quiero presentar dos operadores nuevos: división entera
+y módulo.
 
 
-\section{Floor division and modulus}
+\section{División entera y módulo}
 
-The {\bf floor division} operator, \verb"//", divides
-two numbers and rounds down to an integer.  For example, suppose the
-run time of a movie is 105 minutes.  You might want to know how
-long that is in hours.  Conventional division
-returns a floating-point number:
+El operados {\bf división entera}, \verb"//", divide
+dos números y redondea a un entero.  Por ejemplo, supongamos que la
+duración de una película es 105 minutos.  Quizás quieres saber
+cuánto dura en horas.  La división convencional
+devuelve un número de coma flotante:
 
 \begin{verbatim}
->>> minutes = 105
->>> minutes / 60
+>>> minutos = 105
+>>> minutos / 60
 1.75
 \end{verbatim}
 
-But we don't normally write hours with decimal points.  Floor
-division returns the integer number of hours, rounding down:
+Pero normalmente no escribimos las horas con decimales.  La división
+entera devuelve el número entero de horas, redondeando:
 
 \begin{verbatim}
->>> minutes = 105
->>> hours = minutes // 60
->>> hours
+>>> minutos = 105
+>>> horas = minutos // 60
+>>> horas
 1
 \end{verbatim}
 
-To get the remainder, you could subtract off one hour in minutes:
+Para obtener el resto, podrías restar una hora en minutos:
 
 \begin{verbatim}
->>> remainder = minutes - hours * 60
->>> remainder
+>>> resto = minutos - horas * 60
+>>> resto
 45
 \end{verbatim}
 
-\index{floor division}
-\index{floating-point division}
-\index{division!floor}
-\index{division!floating-point}
-\index{modulus operator}
-\index{operator!modulus}
+\index{división entera}
+\index{división de coma flotante}
+\index{entera!división}
+\index{coma flotante!división}
+\index{operador módulo}
+\index{módulo!operador}
 
-An alternative is to use the {\bf modulus operator}, \verb"%", which
-divides two numbers and returns the remainder.
+Una alternativa es usar el {\bf operador módulo}, \verb"%", el cual
+divide dos números y devuelve el resto.
 
 \begin{verbatim}
->>> remainder = minutes % 60
->>> remainder
+>>> resto = minutos % 60
+>>> resto
 45
 \end{verbatim}
 %
-The modulus operator is more useful than it seems.  For
-example, you can check whether one number is divisible by another---if
-{\tt x \% y} is zero, then {\tt x} is divisible by {\tt y}.
-\index{divisibility}
+El operador módulo es más útil de lo que parece.  Por
+ejemplo, puedes verificar si un número es divisible por otro---si
+{\tt x \% y} es cero, entonces {\tt x} es divisible por {\tt y}.
+\index{divisibilidad}
 
-Also, you can extract the right-most digit
-or digits from a number.  For example, {\tt x \% 10} yields the
-right-most digit of {\tt x} (in base 10).  Similarly {\tt x \% 100}
-yields the last two digits.
+Además, puedes extraer el dígito de más a la derecha
+o más dígitos de un número.  Por ejemplo, {\tt x \% 10} entrega el
+dígito de más a la derecha de {\tt x} (en base 10).  De manera similar, {\tt x \% 100}
+entrega los dos últimos dígitos.
 
-If you are using Python 2, division works differently.  The
-division operator, \verb"/", performs floor division if both
-operands are integers, and floating-point division if either
-operand is a {\tt float}.
+Si estás usando Python 2, la división funciona diferente.  El
+operador división, \verb"/", realiza una división entera si ambos
+operandos son enteros, y la división de coma flotante si cualquiera de
+los dos operandos es un {\tt float}.
 \index{Python 2}
 
 
-\section{Boolean expressions}
-\index{boolean expression}
-\index{expression!boolean}
-\index{logical operator}
-\index{operator!logical}
+\section{Expresión booleana}
+\index{expresión booleana}
+\index{booleana!expresión}
+\index{operador lógico}
+\index{lógico!operador}
 
-A {\bf boolean expression} is an expression that is either true
-or false.  The following examples use the
-operator {\tt ==}, which compares two operands and produces
-{\tt True} if they are equal and {\tt False} otherwise:
+Una {\bf expresión booleana} es una expresión que es verdadera
+o falsa.  Los siguientes ejemplos usan el
+operador {\tt ==}, el cual compara dos operandos y produce
+{\tt True} si son iguales y {\tt False} si no lo son:
 
 \begin{verbatim}
 >>> 5 == 5
@@ -3623,14 +3623,14 @@ True
 False
 \end{verbatim}
 %
-{\tt True} and {\tt False} are special
-values that belong to the type {\tt bool}; they are not strings:
-\index{True special value}
-\index{False special value}
-\index{special value!True}
-\index{special value!False}
-\index{bool type}
-\index{type!bool}
+{\tt True} y {\tt False} son valores
+especiales que pertenecen al tipo {\tt bool}; no son cadenas:
+\index{valor especial True}
+\index{valor especial False}
+\index{True!valor especial}
+\index{False!valor especial}
+\index{tipo bool}
+\index{bool!tipo}
 
 \begin{verbatim}
 >>> type(True)
@@ -3639,326 +3639,326 @@ values that belong to the type {\tt bool}; they are not strings:
 <class 'bool'>
 \end{verbatim}
 %
-The {\tt ==} operator is one of the {\bf relational operators}; the
-others are:
+El operador {\tt ==} es uno de los {\bf operadores relacionales}; los
+otros son:
 
 \begin{verbatim}
-      x != y               # x is not equal to y
-      x > y                # x is greater than y
-      x < y                # x is less than y
-      x >= y               # x is greater than or equal to y
-      x <= y               # x is less than or equal to y
+      x != y               # x no es igual a y
+      x > y                # x es mayor que y
+      x < y                # x es menor que y
+      x >= y               # x es mayor o igual que y
+      x <= y               # x es menor o igual que y
 \end{verbatim}
 %
-Although these operations are probably familiar to you, the Python
-symbols are different from the mathematical symbols.  A common error
-is to use a single equal sign ({\tt =}) instead of a double equal sign
-({\tt ==}).  Remember that {\tt =} is an assignment operator and
-{\tt ==} is a relational operator.   There is no such thing as
-{\tt =<} or {\tt =>}.
-\index{relational operator}
-\index{operator!relational}
+Aunque estas operaciones probablemente sean familiares para ti, los símbolos de Python
+son diferentes a los símbolos matemáticos.  Un error común
+es usar el signo igual simple ({\tt =}) en lugar de un signo igual doble
+({\tt ==}).  Recuerda que {\tt =} es un operador de asignación y
+{\tt ==} es un operador relacional.   No hay tal cosa como
+{\tt =<} o {\tt =>}.
+\index{operador relacional}
+\index{relacional!operador}
 
 
-\section {Logical operators}
-\index{logical operator}
-\index{operator!logical}
+\section {Operadores lógicos}
+\index{operador lógico}
+\index{lógico!operador}
 
-There are three {\bf logical operators}: {\tt and}, {\tt
-or}, and {\tt not}.  The semantics (meaning) of these operators is
-similar to their meaning in English.  For example,
-{\tt x > 0 and x < 10} is true only if {\tt x} is greater than 0
-{\em and} less than 10.
-\index{and operator}
-\index{or operator}
-\index{not operator}
-\index{operator!and}
-\index{operator!or}
-\index{operator!not}
+Existen tres {\bf operadores lógicos}: {\tt and}, {\tt
+or} y {\tt not}.  La semántica (significado) de estos operadores es
+similar a su significado en inglés.  Por ejemplo,
+{\tt x > 0 and x < 10} es verdadera sólo si {\tt x} es mayor que 0
+{\em y} menor que 10.
+\index{operador and}
+\index{operador or}
+\index{operador not}
+\index{and!operador}
+\index{or!operador}
+\index{not!operador}
 
-{\tt n\%2 == 0 or n\%3 == 0} is true if {\em either or both} of the
-conditions is true, that is, if the number is divisible by 2 {\em or}
+{\tt n\%2 == 0 or n\%3 == 0} es verdadera si {\em cualquiera o ambas}
+condiciones son verdaderas, es decir, si el número es divisible por 2 {\em o}
 3.
 
-Finally, the {\tt not} operator negates a boolean
-expression, so {\tt not (x > y)} is true if {\tt x > y} is false,
-that is, if {\tt x} is less than or equal to {\tt y}.
+Finalmente, el operador {\tt not} niega una expresión
+booleana, por lo que {\tt not (x > y)} es verdadera si {\tt x > y} es falsa,
+es decir, si {\tt x} es menor o igual que {\tt y}.
 
-Strictly speaking, the operands of the logical operators should be
-boolean expressions, but Python is not very strict.
-Any nonzero number is interpreted as {\tt True}:
+Estrictamente hablando, los operandos de los operadores lógicos deberían ser
+expresiones booleanas, pero Python no es muy estricto.
+Cualquier número distinto de cero es interpretado como {\tt True}:
 
 \begin{verbatim}
 >>> 42 and True
 True
 \end{verbatim}
 %
-This flexibility can be useful, but there are some subtleties to
-it that might be confusing.  You might want to avoid it (unless
-you know what you are doing).
+Esta flexibilidad puede ser útil, pero hay algunas sutilezas
+que podrían ser confusas.  Podrías querer evitarla (a menos que
+sepas lo que estás haciendo).
 
 
-\section{Conditional execution}
+\section{Ejecucioń condicional}
 \label{conditional.execution}
 
-\index{conditional statement}
-\index{statement!conditional}
-\index{if statement}
-\index{statement!if}
-\index{conditional execution}
-In order to write useful programs, we almost always need the ability
-to check conditions and change the behavior of the program
-accordingly.  {\bf Conditional statements} give us this ability.  The
-simplest form is the {\tt if} statement:
+\index{sentencia condicional}
+\index{condicional!sentencia}
+\index{sentencia if}
+\index{if!sentencia}
+\index{ejecución condicional}
+Para escribir programas útiles, casi necesitamos la capacidad
+de verificar las condiciones y cambiar el comportamiento del programa
+como corresponde.  Las {\bf sentencias condicionales} nos dan esta habilidad.  La
+forma más simple es la sentencia {tt if}:
 
 \begin{verbatim}
 if x > 0:
-    print('x is positive')
+    print('x es positivo')
 \end{verbatim}
 %
-The boolean expression after {\tt if} is
-called the {\bf condition}.  If it is true, the indented
-statement runs.  If not, nothing happens.
-\index{condition}
-\index{compound statement}
-\index{statement!compound}
+La expresión booleana después de {\tt if} se
+llama {\bf condición}.  Si ésta es verdadera, se ejecutan las sentencias
+con sangría.  Si no, no pasa nada.
+\index{condición}
+\index{sentencia compuesta}
+\index{compuesta!sentencia}
 
-{\tt if} statements have the same structure as function definitions:
-a header followed by an indented body.  Statements like this are
-called {\bf compound statements}.
+Las sentencias {\tt if} tienen la misma estructura que las definiciones de función:
+un encabezado seguido de un cuerpo con sangrías.  Las sentencias como esta se
+llaman {\bf sentencias compuestas}.
 
-There is no limit on the number of statements that can appear in
-the body, but there has to be at least one.
-Occasionally, it is useful to have a body with no statements (usually
-as a place keeper for code you haven't written yet).  In that
-case, you can use the {\tt pass} statement, which does nothing.
-\index{pass statement}
-\index{statement!pass}
+No hay límite en el número de sentencias que pueden aparecer en
+el cuerpo, pero tiene que haber al menos una.
+A veces, es útil tener un cuerpo sin sentencias (usualmente
+para reservar lugar a código que no has escrito todavía).  En ese
+caso, puedes usar la sentencia {\tt pass}, la cual no hace nada.
+\index{sentencia pass}
+\index{pass!sentencia}
 
 \begin{verbatim}
 if x < 0:
-    pass          # TODO: need to handle negative values!
+    pass          # PENDIENTE: ¡falta manejar los valores negativos!
 \end{verbatim}
 %
 
-\section{Alternative execution}
+\section{Ejecución alternativa}
 \label{alternative.execution}
-\index{alternative execution}
-\index{else keyword}
-\index{keyword!else}
+\index{ejecución alternativa}
+\index{palabra clave else}
+\index{else!palabra clave}
 
-A second form of the {\tt if} statement is ``alternative execution'',
-in which there are two possibilities and the condition determines
-which one runs.  The syntax looks like this:
+Una segunda forma de la sentencia {\tt if} es la ``ejecución alternativa'',
+en la cual hay dos posibilidades y la condición determina
+cuál se ejecuta.  La sintaxis se ve así:
 
 \begin{verbatim}
 if x % 2 == 0:
-    print('x is even')
+    print('x es par')
 else:
-    print('x is odd')
+    print('x es impar')
 \end{verbatim}
 %
-If the remainder when {\tt x} is divided by 2 is 0, then we know that
-{\tt x} is even, and the program displays an appropriate message.  If
-the condition is false, the second set of statements runs.
-Since the condition must be true or false, exactly one of the
-alternatives will run.  The alternatives are called {\bf
-  branches}, because they are branches in the flow of execution.
-\index{branch}
+Si el resto de dividir {\tt x} por 2 es 0, entonces sabemos que
+{\tt x} es par y el programa muestra un mensaje correspondiente.  Si
+la condición es falsa, se ejecuta el segundo conjunto de sentencias.
+Dado que la condición debe ser verdadera o falsa, se ejecutará exactamente
+una de las alternativas.  Las alternativas se llaman {\bf
+  ramas}, porque son ramas en el flujo de ejecución.
+\index{rama}
 
 
 
-\section{Chained conditionals}
-\index{chained conditional}
-\index{conditional!chained}
+\section{Condicionales encadenados}
+\index{condicional encadenado}
+\index{encadenado!condicional}
 
-Sometimes there are more than two possibilities and we need more than
-two branches.  One way to express a computation like that is a {\bf
-chained conditional}:
+A veces hay más de dos posibilidades y necesitamos más de
+dos ramas.  Una manera de expresar una computación como esa es un {\bf
+condicional encadenado}:
 
 \begin{verbatim}
 if x < y:
-    print('x is less than y')
+    print('x es menor que y')
 elif x > y:
-    print('x is greater than y')
+    print('x es mayor que y')
 else:
-    print('x and y are equal')
+    print('x e y son iguales')
 \end{verbatim}
 %
-{\tt elif} is an abbreviation of ``else if''.  Again, exactly one
-branch will run.  There is no limit on the number of {\tt
-elif} statements.  If there is an {\tt else} clause, it has to be
-at the end, but there doesn't have to be one.
-\index{elif keyword}
-\index{keyword!elif}
+{\tt elif} es una abreviación de ``else if''.  De nuevo, se ejecutará exactamente
+una rama.  No hay límite en el número de sentencias {\tt
+elif}.  Si hay una cláusula {\tt else}, tiene que estar
+al final, pero no tiene que haber una.
+\index{palabra clave elif}
+\index{elif!palabra clave}
 
 \begin{verbatim}
-if choice == 'a':
-    draw_a()
-elif choice == 'b':
-    draw_b()
-elif choice == 'c':
-    draw_c()
+if opcion == 'a':
+    dibujar_a()
+elif opcion == 'b':
+    dibujar_b()
+elif opcion == 'c':
+    dibujar_c()
 \end{verbatim}
 %
-Each condition is checked in order.  If the first is false,
-the next is checked, and so on.  If one of them is
-true, the corresponding branch runs and the statement
-ends.  Even if more than one condition is true, only the
-first true branch runs.
+Cada condición es verificada en orden.  Si la primera es falsa,
+se verifica la siguiente, y así.  Si una de ellas es
+verdadera, se ejecuta la rama correspondiente y la sentencia
+termina.  Incluso si más de una condición es verdadera, sólo se ejecuta
+la primera rama verdadera.
 
 
-\section{Nested conditionals}
-\index{nested conditional}
-\index{conditional!nested}
+\section{Condicionales anidados}
+\index{condicional anidado}
+\index{anidado!condicional}
 
-One conditional can also be nested within another.  We could have
-written the example in the previous section like this:
+Un condicional puede también estar anidado dentro de otro.  Podríamos haber
+escrito el ejemplo de la sección anterior de esta forma:
 
 \begin{verbatim}
 if x == y:
-    print('x and y are equal')
+    print('x e y son iguales')
 else:
     if x < y:
-        print('x is less than y')
+        print('x es menor que y')
     else:
-        print('x is greater than y')
+        print('x es mayor que y')
 \end{verbatim}
 %
-The outer conditional contains two branches.  The
-first branch contains a simple statement.  The second branch
-contains another {\tt if} statement, which has two branches of its
-own.  Those two branches are both simple statements,
-although they could have been conditional statements as well.
+El condicional de más afuera contiene dos ramas.  La
+primera rama contiene una sentencia simple.  La segunda rama
+contiene otra sentencia {\tt if}, la cual tiene dos ramas
+propias.  Aquellas dos ramas son sentencias simples,
+aunque tembién podrían haber sido sentencias condicionales.
 
-Although the indentation of the statements makes the structure
-apparent, {\bf nested conditionals} become difficult to read very
-quickly.  It is a good idea to avoid them when you can.
+A pesar de que la sangría de las sentencias hacen evidente la
+estructura, los {\bf condicionales anidados} se vuelven difíciles de leer
+rápidamente.  Es una buena idea evitarlos cuando puedas.
 
-Logical operators often provide a way to simplify nested conditional
-statements.  For example, we can rewrite the following code using a
-single conditional:
+Los operadores lógicos a menudo proporcionan una manera de simplificar las sentencias condicionales
+anidadas.  Por ejemplo, podemos reescribir el siguiente código usando un
+único condicional:
 
 \begin{verbatim}
 if 0 < x:
     if x < 10:
-        print('x is a positive single-digit number.')
+        print('x es un número positivo de un dígito.')
 \end{verbatim}
 %
-The {\tt print} statement runs only if we make it past both
-conditionals, so we can get the same effect with the {\tt and} operator:
+La sentencia {\tt print} se ejecuta sólo si pasamos por los dos
+condicionales, así que podemos obtener el mismo efecto con el operador {\tt and}:
 
 \begin{verbatim}
 if 0 < x and x < 10:
-    print('x is a positive single-digit number.')
+    print('x es un número positivo de un dígito.')
 \end{verbatim}
 
-For this kind of condition, Python provides a more concise option:
+Para este tipo de condición, Python proporciona una opción más concisa:
 
 \begin{verbatim}
 if 0 < x < 10:
-    print('x is a positive single-digit number.')
+    print('x es un número positivo de un dígito.')
 \end{verbatim}
 
 
-\section{Recursion}
+\section{Recursividad}
 \label{recursion}
-\index{recursion}
+\index{recursividad}
 
-It is legal for one function to call another;
-it is also legal for a function to call itself.  It may not be obvious
-why that is a good thing, but it turns out to be one of the most
-magical things a program can do.
-For example, look at the following function:
+Es legal para una función llamar a otra;
+es legal también para una función llamarse a sí misma.  Puede que no sea obvio
+por qué eso es una buena idea, pero resulta ser una de las cosas más
+mágicas que puede hacer un programa.
+Por ejemplo, mira la siguiente función:
 
 \begin{verbatim}
-def countdown(n):
+def cuenta_reg(n):
     if n <= 0:
-        print('Blastoff!')
+        print('¡Despegue!')
     else:
         print(n)
-        countdown(n-1)
+        cuenta_reg(n-1)
 \end{verbatim}
 %
-If {\tt n} is 0 or negative, it outputs the word, ``Blastoff!''
-Otherwise, it outputs {\tt n} and then calls a function named {\tt
-countdown}---itself---passing {\tt n-1} as an argument.
+Si {\tt n} es 0 o negativo, muestra la palabra, ``¡Despegue!''
+De lo contrario, muestra {\tt n} y luego llama a la función con nombre {\tt
+cuenta\_reg}---a sí misma---pasando a {\tt n-1} como argumento.
 
-What happens if we call this function like this?
+¿Qué ocurre si llamamos a esta función así?
 
 \begin{verbatim}
->>> countdown(3)
+>>> cuenta_reg(3)
 \end{verbatim}
 %
-The execution of {\tt countdown} begins with {\tt n=3}, and since
-{\tt n} is greater than 0, it outputs the value 3, and then calls itself...
+La ejecución de {\tt cuenta\_reg} comienza con {\tt n=3}, y dado que
+{\tt n} es mayor que 0, muestra el valor 3 y se llama a sí misma...
 
 \begin{quote}
-The execution of {\tt countdown} begins with {\tt n=2}, and since
-{\tt n} is greater than 0, it outputs the value 2, and then calls itself...
+La ejecución de {\tt cuenta\_reg} comienza con {\tt n=2}, y dado que
+{\tt n} es mayor que 0, muestra el valor 2 y se llama a sí misma...
 
 \begin{quote}
-The execution of {\tt countdown} begins with {\tt n=1}, and since
-{\tt n} is greater than 0, it outputs the value 1, and then calls itself...
+La ejecución de {\tt cuenta\_reg} comienza con {\tt n=1}, y dado que
+{\tt n} es mayor que 0, muestra el valor 1 y se llama a sí misma...
 
 \begin{quote}
-The execution of {\tt countdown} begins with {\tt n=0}, and since {\tt
-n} is not greater than 0, it outputs the word, ``Blastoff!'' and then
-returns.
+La ejecución de {\tt cuenta\_reg} comienza con {\tt n=0}, y dado que {\tt
+n} no es mayor que 0, muestra la palabra ``¡Despegue!'' y luego
+termina.
 \end{quote}
 
-The {\tt countdown} that got {\tt n=1} returns.
+La {\tt cuenta\_reg} que obtuvo {\tt n=1} termina.
 \end{quote}
 
-The {\tt countdown} that got {\tt n=2} returns.
+La {\tt cuenta\_reg} que obtuvo {\tt n=2} termina.
 \end{quote}
 
-The {\tt countdown} that got {\tt n=3} returns.
+La {\tt cuenta\_reg} que obtuvo {\tt n=3} termina.
 
-And then you're back in \verb"__main__".  So, the
-total output looks like this:
+Y luego estás de regreso en \verb"__main__".  Por lo tanto, la
+salida completa se ve así:
 \index{main}
 
 \begin{verbatim}
 3
 2
 1
-Blastoff!
+¡Despegue!
 \end{verbatim}
 %
-A function that calls itself is {\bf recursive}; the process of
-executing it is called {\bf recursion}.
-\index{recursion}
-\index{function!recursive}
+Una función que se llama a sí misma es {\bf recursiva}; el proceso de
+ejecutarla se llama {\bf recursividad}.
+\index{recursividad}
+\index{función recursiva}
 
-As another example, we can write a function that prints a
-string {\tt n} times.
+Como otro ejemplo, podemos escribir una función que imprima una
+cadena {\tt n} veces.
 
 \begin{verbatim}
-def print_n(s, n):
+def imprimir_n(s, n):
     if n <= 0:
         return
     print(s)
-    print_n(s, n-1)
+    imprimir_n(s, n-1)
 \end{verbatim}
 %
-If {\tt n <= 0} the {\bf return statement} exits the function.  The
-flow of execution immediately returns to the caller, and the remaining
-lines of the function don't run.
-\index{return statement}
-\index{statement!return}
+Si {\tt n <= 0} la {\bf sentencia return} hace que salga de laa función.  El
+flujo de ejecución vuelve inmediatamente a la llamadora y las líneas restantes
+de la función no se ejecutan.
+\index{sentencia return}
+\index{return!sentencia}
 
-The rest of the function is similar to {\tt countdown}: it displays
-{\tt s} and then calls itself to display {\tt s} $n-1$ additional
-times.  So the number of lines of output is {\tt 1 + (n - 1)}, which
-adds up to {\tt n}.
+El resto de la función es similar a {\tt cuenta\_reg}: muestra
+{\tt s} y luego se llama a sí misma para mostrar {\tt s} otras $n-1$
+veces.  Entonces el número de líneas de salida es {\tt 1 + (n - 1)}, lo cual
+suma {\tt n}.
 
-For simple examples like this, it is probably easier to use a {\tt
-for} loop.  But we will see examples later that are hard to write
-with a {\tt for} loop and easy to write with recursion, so it is
-good to start early.
-\index{for loop}
-\index{loop!for}
+Para ejemplos simples como este, probablemente es más fácil usar un bucle {\tt
+for}.  Pero más adelante veremos ejemplos que son difíciles de escribir
+con un bucle {\tt for} y fáciles de escribir con recursividad, así que es
+bueno comenzar pronto.
+\index{bucle for}
+\index{for!bucle}
 
 
 \section{Stack diagrams for recursive functions}
